// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/useXChat/demo/basic.tsx correctly 1`] = `
<div
  class="ant-flex css-var-R0 ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
>
  <div
    class="ant-bubble-list css-var-R0 ant-bubble-list-reach-end"
    style="max-height:300px"
  />
  <div
    class="ant-sender css-var-R0"
  >
    <div
      class="ant-sender-content"
    >
      <textarea
        class="ant-input ant-input-borderless css-var-R0 ant-input-css-var ant-sender-input"
      />
      <div
        class="ant-sender-actions-list"
      >
        <div
          class="ant-sender-actions-list-presets ant-flex css-var-R0"
        >
          <button
            class="ant-btn css-var-R0 ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only ant-sender-actions-btn ant-sender-actions-btn-disabled"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="arrow-up"
                class="anticon anticon-arrow-up"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="arrow-up"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/useXChat/demo/stream.tsx correctly 1`] = `
<div
  class="ant-flex css-var-R0 ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
>
  <div
    class="ant-bubble-list css-var-R0 ant-bubble-list-reach-end"
    style="max-height:300px"
  />
  <div
    class="ant-sender css-var-R0"
  >
    <div
      class="ant-sender-content"
    >
      <textarea
        class="ant-input ant-input-borderless css-var-R0 ant-input-css-var ant-sender-input"
      />
      <div
        class="ant-sender-actions-list"
      >
        <div
          class="ant-sender-actions-list-presets ant-flex css-var-R0"
        >
          <button
            class="ant-btn css-var-R0 ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only ant-sender-actions-btn ant-sender-actions-btn-disabled"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="arrow-up"
                class="anticon anticon-arrow-up"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="arrow-up"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/useXChat/demo/suggestions.tsx correctly 1`] = `
<div
  class="ant-flex css-var-R0 ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
>
  <div
    class="ant-bubble-list css-var-R0 ant-bubble-list-reach-end"
    style="max-height:300px"
  >
    <div
      class="ant-bubble css-var-R0 ant-bubble-start"
      role="ai"
    >
      <div
        class="ant-bubble-content ant-bubble-content-filled"
      >
        Hello, what can I do for you?
      </div>
    </div>
  </div>
  <div
    class="ant-sender css-var-R0"
  >
    <div
      class="ant-sender-content"
    >
      <textarea
        class="ant-input ant-input-borderless css-var-R0 ant-input-css-var ant-sender-input"
      />
      <div
        class="ant-sender-actions-list"
      >
        <div
          class="ant-sender-actions-list-presets ant-flex css-var-R0"
        >
          <button
            class="ant-btn css-var-R0 ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only ant-sender-actions-btn ant-sender-actions-btn-disabled"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="arrow-up"
                class="anticon anticon-arrow-up"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="arrow-up"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
